--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bookdb
 spring.datasource.username=root
 spring.datasource.password=1530
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.data.rest.basePath=/api
+server.servlet.context-path=/api
+server.port=8080
